public/css/styles.css
* {
    margin: 0;
    padding: 0;
    scroll-behavior: smooth;
}

/* Remmove Scroll Bar */
::-webkit-scrollbar {
    width: 0;  /* Remove scrollbar space */
    background: transparent;  /* Optional: just make scrollbar invisible */
}


/*Fonts*/
h1, h2, h3, h4, a {
    font-family: 'Montserrat', sans-serif;
}

p {
    font-family: 'Poppins', sans-serif;
}



/*Nav Section*/
nav {
    height: 14vh;
    width: 100%;
    position: fixed;
    display: flex;
    z-index: 2;
    transition: 0.5s ease;
}

nav.shrink {
    height: 10vh;
    background-color: #161616;
    transition: 0.5s ease;
}

nav.shrink2 {
    height: 10vh;
    background-color: #161616;
    transition: 0.5s ease;
}

nav h1 {
    color: #eee;
    position: absolute;
    left: 25px;
    top: 50%;
    transform: translateY(-50%);
    letter-spacing: 2px;
}

.nav-items {
    display: flex;
    position: absolute;
    right: 50px;
    top: 50%;
    transform: translateY(-50%);
    list-style: none;
}

nav ul li {
    margin: 0 25px;
}

nav ul li a {
    text-decoration: none;
    color: #eee;
    font-size: 1em;
    transition: 0.5s ease;
}

nav ul li a {
    transition: 0.s ease;
}



/*Title section*/
#title {
    height: 100vh;
    /*background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.99)), url(/public/images/pexels-ian-beckley-2440024.jpg);*/
    background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(29, 30, 33, 0.99)), url(../images/pexels-ian-beckley-2440024.jpg);
    background-size: cover;
}

.title-banner {
    /*background-color: rgb(0, 0, 0, 0.2);*/
    position: absolute;
    width: 40%;
    height: 200px;
    top: 35%;
    transform: translateY(-35%);
    left: 50%;
    transform: translateX(-50%);
    text-align: center;
    border-radius: 28px;
    line-height: 2;
    z-index: 1;
}

.title-banner h2 {
    color: #eee;
    position: relative;
    top: 30%;
    transform: translateY(-30%);
}

.top {
    font-size: 3.5rem;
}

.bottom {
    font-size: 2.1rem;
}

.title-down-arrow {
    position: relative;
    top: 80%;
    text-align: center;
}

.title-down-arrow i {
    color: #eee;
}

.title-down-arrow i:hover {
    color: #dbdada;
    cursor: pointer;
    transition: 0.4s;
    font-size: 3.1rem;
}


/*About Section*/
#about {
    height: 100vh;
    max-width: 100%;
    padding: 7% 0;
    /*background-color: #eee;*/
    background: #1d1e21;
    color: #eee;
}

.about-content {
    display: block;
    width: 70%;
    position: relative;
    margin: 8% auto 0;
    text-align: center;
}

.moon {
    position: relative;
    width: 100px;
    height: 100px;
    background-color: #eee;
    box-shadow:0 0 25px #9ecaed;
    border-radius: 360px;
    margin: 5% auto;
}

.crator1 {
    width: 15px;
    height: 15px;
    position: absolute;
    top: 25px;
    left: 25px;
    background-color: rgb(219, 216, 216);
    border-radius: 340px;
}

.crator2 {
    width: 10px;
    height: 10px;
    position: absolute;
    top: 40px;
    left: 12px;
    background-color: rgb(219, 216, 216);
    border-radius: 340px;
}

.crator3 {
    width: 12px;
    height: 12px;
    position: absolute;
    top: 50px;
    left: 30px;
    background-color: rgb(219, 216, 216);
    border-radius: 340px;
}

.about-content p {
    line-height: 2;
    margin: auto 0;
    text-align: center;
}

.tech-list {
    position: relative;
    width: 100%;
}

.tech-list ul {
    display: flex;
    list-style: none;
    position: relative;
    width: 100%;
    margin: 75px 0 0;
    padding: 0;
}

.tech-list ul li {
    flex: auto;
} 

.tech-list i{
    font-size: 2em;
    transition: 0.5s ease;
}

.html {
    color: #f16529;
}

.html:hover {
    font-size: 3em;
    transition: 0.5s ease;
}

.css {
  color: #379ad6;
}

.css:hover {
    font-size: 3em;
    transition: 0.5s ease;
}

.javascript {
  color : #f7df1e;
}

.javascript:hover {
    font-size: 3em;
    transition: 0.5s ease;
}

.python {
  color: #347ab4;
}

.python:hover {
    font-size: 3em;
    transition: 0.5s ease;
}

.java {
  color: orange;
}

.java:hover {
    font-size: 3em;
    transition: 0.5s ease;
}

.node {
  color: #83cd29;
}

.node:hover {
    font-size: 3em;
    transition: 0.5s ease;
}

.about-down-arrow {
    position: relative;
    top: 40%;
    text-align: center;
}

.about-down-arrow i {
    color: #eee;
}

.about-down-arrow i:hover {
    color: #dbdada;
    cursor: pointer;
    transition: 0.4s;
    font-size: 3.1rem;
}


/*Project Section*/
#projects {
    height: 100vh;
    width: 100%;
    background: #000;
    background-image: linear-gradient(rgba(29, 30, 33, 0.70), rgba(29, 30, 33, 0.99)), url(../images/pexels-hristo-fidanov-1252869.jpg);
    background-attachment: fixed;
    background-size: cover;
}

.project-gallery {
    position: absolute;
    top: 220%;
    transform: translateY(-220%);
    left: 50%;
    transform: translateX(-50%);
}

.project-gallery h1 {
    position: relative;
    color: #eee;
    text-align: center;
    margin-bottom: 70px;
}

.project-gallery ul {
    display: flex;
    list-style: none;
    position: absolute;
    left: 50%;
    transform: translateX(-50%);
}

.card {
    width: 15rem;
    height: 26rem;
    margin-right: 25px;
}

.card img {
    max-height: 250px;
    margin-bottom: 25px;
}

.card-title {
    text-align: center;
}

.card-foot {
    padding: 0 2%;
}

.card .btn {
    position: absolute;
    bottom: 20px;
    width: 96%;
}

.last-card {
    margin-right: 0;
}

.projects-down-arrow {
    position: relative;
    top: 85%;
    text-align: center;
}

.projects-down-arrow i {
    color: #eee;
}

.projects-down-arrow i:hover {
    color: #dbdada;
    cursor: pointer;
    transition: 0.4s;
    font-size: 3.1rem;
}


/*Resume Section*/
#resume {
    height: 100vh;
    text-align: center;
    /*background-color: #eee;*/
    background: #1d1e21;
    padding: 15% 15%;
    color: #eee;
}

#resume h2 {
    margin-bottom: 100px;
}

.resume-icon i {
    font-size: 2em;
    color: #24376C;
}

.resume-icon i:hover {
    cursor: pointer;
    color: #3B508B;
}

.resume-down-arrow {
    position: relative;
    top: 85%;
    text-align: center;
}

.resume-down-arrow i {
    color: #eee;
}

.resume-down-arrow i:hover {
    color: #dbdada;
    cursor: pointer;
    transition: 0.4s;
    font-size: 3.1rem;
}


/*Contact Section*/
#contact {
    /*background-color: #262626; a lighter black */
    background-color: #161616;
    color: #eee;
    height: 15vh;
}

.contact-items {
    width: 50vw;
    position: relative;
    padding-top: 2%;
    left: 50%;
    transform: translateX(-50%);
    transition: 0.5s ease;
}

.contact-items ul {
    display: flex;
    list-style: none;
    position: absolute;
    left: 50%;
    transform: translateX(-50%);
}

.contact-items ul li {
    width: 57px;
    height: 57px;
    margin: 5px 40px;
    text-align: center;
    cursor: pointer;
    border-radius: 30%;
    border: 5px solid #fff;
    float: left;
    transition: all 0.5s ease;
}

/*Linkedin*/
.contact-items ul li:hover.google{
    border: 5px solid  #3b5998;
    box-shadow: 0 0 15px  #3b5998;
    transition: all 0.5s ease;
}

/*twitter*/
.contact-items ul li:hover.twitter{
    border: 5px solid  #00aced;
    box-shadow: 0 0 15px  #00aced;
    transition: all 0.5s ease;
}

/*Insta*/
.contact-items ul li:hover.instagram{
    border: 5px solid #bc2a8d;
    box-shadow: 0 0 15px #bc2a8d;
    transition: all 0.5s ease;
}

/*Github*/
.contact-items ul li:hover.github{
    border: 5px solid  #dd4b39;
    box-shadow: 0 0 15px  #dd4b39;
    transition: all 0.5s ease;
}

.credit {
    background-color: #161616;
    color: #eee;
}

.credit p {
    left: 5px;
    margin: 0;
    padding: 0;
}

.credit a {
    text-decoration: none;
}



/*Responsive Media Query*/

#mobile-nav-icon {
    display: none;
}

.mobile-nav-items {
    display: none;
}

@media only screen and (max-width: 1100px) {

    /* nav */
    .nav-items {
        display: none;
    }

    #mobile-nav-icon {
        display: block;
        color: #ffffff;
        font-size: 3em;
        position: absolute;
        right: 25px;
        top: 50%;
        transform: translateY(-50%);
        cursor: pointer;
    }

    .mobile-nav-items  {
        display: block;
        background-color: rgba(22, 22, 22, 0.5);
        position: absolute;
        right: -200px;
        margin-top: 14vh;
        list-style: none;
        transition: 0.5s ease;
        padding: 5px;
    }

    .mobile-nav-items li {
        padding: 10px 0;
    }

    .nav-items-shrink, .nav-items-shrink2 {
        margin-top: 10vh;
        background-color: rgba(22, 22, 22, 1);
        transition: 0.5s ease;
    }

    @keyframes slide-in {
        from {right: -200px;}
        to {right: 0;}
    }

    @keyframes slide-out {
        from {right: 0;}
        to {right: -200px;}
    }

    .show-mobile-nav-items {
        animation-name: slide-in;
        animation-fill-mode: forwards;
        animation-duration: 1s;
    }

    .hide-mobile-nav-items {
        animation-name: slide-out;
        animation-fill-mode: forwards;
        animation-duration: 1s;
    }


    /* title */
    .title-banner {
        width: 90%;
    }

    .top {
        font-size: 3rem;
    }
    
    .bottom {
        font-size: 2rem;
    }


    /* about */
    .about-content {
        width: 95%;
    }

    .moon {
        margin: 10% auto;
    }

    .about-down-arrow {
        top: 30%;
    }


    #projects {
        display: none;
    }
    #resume {
        display: none;
    }
    #contact {
        display: none;
    }
  
}

@media only screen and (max-width: 400px) {

    .top {
        font-size: 2.5rem;
    }
    
    .bottom {
        font-size: 1.5rem;
    }

    .moon {
        margin: 25% auto;
    }

    .about-down-arrow {
        top: 20%;
    }

}

